--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -81,8 +81,7 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    constant = term[0]*term[1]\n",
-    "    exponent = term[1]\n",
+    "    constant = term[0]*ter\n",
     "    pass"
    ]
   },
