--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    derivative_terms\n",
+    "    derivative_terms = list(map)\n",
     "    pass"
    ]
   },
