Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,9 +154,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_derivative(function_terms):\n",
+    "def find_derivative(function_terms):, der\n",
     "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term), function_terms))\n",
-    "    return list(filter(la))\n",
+    "    return list(filter(lambda derivative_term: derivative_term[0] !=0))\n",
     "    pass"
    ]
   },
