--- a/index.ipynb
+++ b/index.ipynb
@@ -150,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_derivative(function_terms):, der\n",
+    "def find_derivative(function_terms):\n",
     "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term), function_terms))\n",
-    "    return list(filter(lambda derivative_term: derivative_term[0] !=0))\n",
+    "    return list(filter(lambda derivative_term: derivative_term[0] !=0, derivative_terms))\n",
     "    pass"
    ]
   },
