--- a/index.ipynb
+++ b/index.ipynb
@@ -258,6 +258,9 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    derivative_fn = find_derivative(terms)\n",
+    "    total = 0\n",
+    "    for term in derivative_fn:\n",
+    "        total +=\n",
     "    pass"
    ]
   },
