Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,8 @@
     "    derivative_fn = find_derivative(terms)\n",
     "    total = 0\n",
     "    for term in derivative_fn:\n",
-    "        total +=\n",
+    "        total += term[0]*x**term[1]\n",
+    "    return total\n",
     "    pass"
    ]
   },
