--- a/index.ipynb
+++ b/index.ipynb
@@ -507,6 +507,8 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
+    "    derivative_terms = find_derivative(terms)\n",
+    "    return function_values_tra\n",
     "    pass"
    ]
   },
